--- a/src/assets/ripple.css
+++ b/src/assets/ripple.css
@@ -1,20 +1,20 @@
 .simple {
-    width: 0;
-    height: 0;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, 0.9);
-    transform: scale(0);
-    position: absolute;
-    opacity: 1;
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.9);
+  transform: scale(0);
+  position: absolute;
+  opacity: 1;
 }
 
 .anotherclass {
-    animation: ripple .8s linear;
+  animation: ripple 0.8s linear;
 }
 
 @keyframes ripple {
-    100% {
-        transform: scale(2.5);
-        opacity: 0;
-    }
+  100% {
+    transform: scale(2.5);
+    opacity: 0;
+  }
 }
