--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -14,13 +14,11 @@
 	.wrap-input{
 	width: auto;
 			position: relative;
-			background-color: #e6e6e6;
-			border: 1px solid transparent;
-			border-radius: 3px;
+
 			margin-bottom: 16px;
-			overflow: hidden;
 			input[type="password"],
-			input[type="email"]{
+			input[type="email"],
+			input[type="text"]{
 					color: #403866;
 					line-height: 1.2;
 					font-size: 18px;
@@ -31,6 +29,22 @@
 					box-sizing: border-box;
 					border: none;
 					padding: 0 20px 0 38px;
-					overflow: hidden;
+					&:focus {
+						outline: none;
+					}
+				
 			}
 	}
+	input[type="file"]{
+	  cursor: inherit;
+    display: block;
+    font-size: 999px;
+    filter: alpha(opacity=0);
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+}
