--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -34,4 +34,15 @@
     }
   }
 }
-
+.main-wrap{
+	max-width: 1200px;
+	margin: 0 auto;
+}
+.main-title{
+	font-size: 40px;
+	font-family: "Helvetica Neue", sans-serif;
+	margin-top: 50px;
+}
+body{
+	margin: 0;
+}
