--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -38,6 +38,9 @@
 .main-wrap{
 	max-width: 1200px;
 	margin: 0 auto;
+	@media only screen and (max-width: 767px) {
+		max-width: 100%;
+	}
 }
 .main-title{
 	font-size: 40px;
@@ -47,4 +50,59 @@
 body{
 	margin: 0;
 	font-family: "Helvetica Neue", sans-serif;
+}
+.card-controls {
+	list-style-type: none;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: center;
+	.button {
+		margin-right: 20px;
+		cursor: pointer;
+		border-radius: 50%;
+		line-height: 14px;
+		position: relative;
+		transition: all 0.2s ease;
+		overflow: hidden;
+		height: 40px;
+		width: 40px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		&:hover {
+			border-radius: 50%;
+			background: #ccc;
+			line-height: 14px;
+		}
+		.material-design-icon__svg {
+			fill: #fefefe;
+		}
+	}
+}
+.trash {
+	.icon-wrap {
+		color: #ccc;
+		cursor: pointer;
+	}
+}
+.button {
+	.icon-wrap {
+		color: #ccc;
+	}
+	&:hover {
+		.icon-wrap {
+			color: #fff;
+		}
+	}
+	&.active {
+		.icon-wrap {
+			color: red;
+		}
+	}
+	&.activePlaylist {
+		.icon-wrap {
+			color: #000;
+		}
+	}
 }
