--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -10,7 +10,12 @@
   font-weight: bold;
   text-transform: uppercase;
 }
-
+.list-wrap{
+	display: grid;
+	grid-template-columns: repeat(5, 19%);
+	grid-gap: 10px;
+	transition: all 0.5s ease;
+}
 .wrap-input,
 .input-wrap {
   width: auto;
