--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -10,11 +10,11 @@
   font-weight: bold;
   text-transform: uppercase;
 }
-.list-wrap{
-	display: grid;
-	grid-template-columns: repeat(5, 19%);
-	grid-gap: 10px;
-	transition: all 0.5s ease;
+.list-wrap {
+  display: grid;
+  grid-template-columns: repeat(5, 19%);
+  grid-gap: 10px;
+  transition: all 0.5s ease;
 }
 .wrap-input,
 .input-wrap {
@@ -40,74 +40,102 @@
     }
   }
 }
-.main-wrap{
-	max-width: 1200px;
-	margin: 0 auto;
-	@media only screen and (max-width: 767px) {
-		max-width: 100%;
-	}
+.main-wrap {
+  max-width: 1200px;
+  margin: 0 auto;
+  @media only screen and (max-width: 767px) {
+    max-width: 100%;
+    overflow: hidden;
+  }
 }
-.main-title{
-	font-size: 40px;
-	font-family: "Helvetica Neue", sans-serif;
-	margin-top: 50px;
+.main-title {
+  font-size: 40px;
+  font-family: "Helvetica Neue", sans-serif;
+  margin-top: 50px;
 }
-body{
-	margin: 0;
-	font-family: "Helvetica Neue", sans-serif;
+body {
+  margin: 0;
+  font-family: "Helvetica Neue", sans-serif;
 }
 .card-controls {
-	list-style-type: none;
-	display: flex;
-	align-items: center;
-	align-content: center;
-	justify-content: center;
-	.button {
-		margin-right: 20px;
-		cursor: pointer;
-		border-radius: 50%;
-		line-height: 14px;
-		position: relative;
-		transition: all 0.2s ease;
-		overflow: hidden;
-		height: 40px;
-		width: 40px;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		&:hover {
-			border-radius: 50%;
-			background: #ccc;
-			line-height: 14px;
-		}
-		.material-design-icon__svg {
-			fill: #fefefe;
-		}
-	}
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  .button {
+    margin-right: 20px;
+    cursor: pointer;
+    border-radius: 50%;
+    line-height: 14px;
+    position: relative;
+    transition: all 0.2s ease;
+    overflow: hidden;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+      border-radius: 50%;
+      background: #ccc;
+      line-height: 14px;
+    }
+    .material-design-icon__svg {
+      fill: #fefefe;
+    }
+  }
+}
+
+.registration-wrapper {
+	max-width: 600px;
+	margin: 50px auto;
 }
 .trash {
-	.icon-wrap {
-		color: #ccc;
-		cursor: pointer;
-	}
+  .icon-wrap {
+    color: #ccc;
+    cursor: pointer;
+  }
 }
 .button {
-	.icon-wrap {
-		color: #ccc;
+  .icon-wrap {
+    color: #ccc;
+  }
+  &:hover {
+    .icon-wrap {
+      color: #fff;
+    }
+  }
+  &.active {
+    .icon-wrap {
+      color: red;
+    }
+  }
+  &.activePlaylist {
+    .icon-wrap {
+      color: #000;
+    }
+  }
+}
+.title-inputs {
+	width: 60%;
+}
+@media only screen and (max-width: 767px) {
+	.svg-inline--fa.fa-w-16{
+    width: 0.7em;
 	}
-	&:hover {
-		.icon-wrap {
-			color: #fff;
-		}
+	.svg-inline--fa.fa-w-12 {
+    width: 0.5em;
 	}
-	&.active {
-		.icon-wrap {
-			color: red;
-		}
+
+	.registration-wrapper {
+		margin: 50px 20px;
 	}
-	&.activePlaylist {
-		.icon-wrap {
-			color: #000;
-		}
+	.title-inputs,
+	.avatar-selector {
+    width: 100%;
+}
+	.avatar-wrapper{
+		flex-direction: column;
 	}
 }
